[package]
name = "goat_api"
version = "0.0.0"
edition = "2018"

[dependencies]
parking_lot = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
smallvec = { version = "*", features = ["union"] }
thiserror = "*"
uuid = { version = "*", features = ["serde", "v4"] }

[dev-dependencies]
itertools = "*"
