[package]
name = "goat_api"
version = "0.0.0"
edition = "2021"

[dependencies]
parking_lot = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
smallvec = { version = "*", features = ["serde", "union"] }
thiserror = "*"
uuid = { version = "*", features = ["serde", "v4"] }

[dev-dependencies]
itertools = "*"
