[package]
name = "goat_api"
version = "0.0.0"
edition = "2021"

[dependencies]
log = "0.4"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.11", features = ["serde", "union"] }
thiserror = "1.0"
uuid = { version = "1.4", features = ["serde", "v4"] }

[dev-dependencies]
itertools = "0.11"
