[package]
name = "goat_server"
version = "0.0.0"
edition = "2018"

[dependencies]
env_logger = "*"
futures-util = "*"
goat_api = { path = "../goat_api" }
goat_bot = { path = "../goat_bot" }
log = "*"
parking_lot = { version = "*", features = ["deadlock_detection"] }
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sha2 = { version = "*", features = ["asm"] }
thiserror = "*"
tokio = { version = "*", features = ["macros", "parking_lot", "rt-multi-thread", "sync", "time"] }
tokio-stream = "*"
uuid = "*"
warp = { version = "*", default-features = false }
